# sdlLearning

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  DebugStarships.ps1  Makefile  RunStarships.ps1  button.cpp  button.hpp  clock.hpp  conanfile.txt  eventHandling.cpp  eventHandling.hpp  main.cpp  object.cpp  object.hpp  readme.md  sdl.cpp  sdl.hpp  starships  starships.code-workspace  test.py  utils.cpp  utils.hpp
levels/: arena.cpp  arena.hpp  menu.cpp  menu.hpp
reinforcement_learning/: GenerateReport.py  MakeNets.py  PpoAgent.py  StarshipsTraining.py  profile.speedscope.json  test.py
src/: CMakeLists.txt  button.cpp  button.hpp  carousel.hpp  clock.hpp  deadCheckable.hpp  envModule.cpp  environment.cpp  environment.hpp  frameUpdateable.hpp  gameState.cpp  gameState.hpp  killable.hpp  main.cpp  mySdl.cpp  mySdl.hpp  object.cpp  object.hpp  observationFactory.cpp  observationFactory.hpp  sdl.cpp  sdl.hpp  soundManager.cpp  soundManager.hpp  timer.hpp  utils.cpp  utils.hpp
src/interpreter/: instructions.hpp  interpreter.cpp  interpreter.hpp  line.cpp  line.hpp  lines.cpp  lines.hpp  word.cpp  word.hpp
src/interpretter/: instructions.hpp  interpretter.cpp  interpretter.hpp  line.cpp  line.hpp  lines.cpp  lines.hpp  word.hpp
src/levels/: arena.cpp  arena.hpp  gameOver.cpp  gameOver.hpp  level.hpp  menu.cpp  menu.hpp
src/physics/: body.cpp  body.hpp  collisionModel.cpp  collisionModel.hpp  collisonModel.hpp  hardware.hpp  physics.cpp  physics.hpp  physicsTypes.hpp
src/prefabs/: prefabs.cpp  prefabs.hpp
src/rendering/: background.cpp  background.hpp  button.cpp  button.hpp  chatbox.cpp  chatbox.hpp  collisionObject.cpp  collisionObject.hpp  controllableObject.cpp  controllableObject.hpp  object.cpp  object.hpp  text.cpp  text.hpp
src/rendering/arena_ui/: console.cpp  console.hpp
src/rendering/menu_ui/: button.hpp
src/ships/: aiShip.cpp  aiShip.hpp  hostileShip.cpp  hostileShip.hpp  playerShip.cpp  playerShip.hpp  projectile.cpp  projectile.hpp  ship.cpp  ship.hpp  tactic.cpp  tactic.hpp  weapon.cpp  weapon.hpp
